# openai-proxy

./: .gitignore  README.md  app.py  pyproject.toml  setup.cfg  test.py
iac/: dynamodb.tf  elasticache.tf  lambda.tf  main.tf  output.tf  variables.tf  vpc.tf
iac/openai_admin/: lambda_function.py  requirements.txt
iac/openai_proxy/: Dockerfile  app.js  lambda_function.py  package-lock.json  package.json  prices.js  requirements.txt
iac/src/: lambda_function.py
openai_proxy/: __init__.py
src/openai_wrapi/: __init__.py  proxy0.py  proxy1.py  utils.py
