[metadata]
name = openai_wrapi
version = 0.0.1
description = OpenAI API proxy for fine-grained cost tracking & control and caching of responses
author = Robert Dargavel Smith
author_email = teticio@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =openai_proxy
install_requires =
    boto3
    openai

[options.packages.find]
where = openai_proxy
exclude =
    iac
